--- a/_posts/azure/2021-07-07-joo-test.md
+++ b/_posts/azure/2021-07-07-joo-test.md
@@ -16,6 +16,7 @@ author: jooho812
 1. timeout 관련된 부분 어떤 로그가 찍히는지?
 
 2. 플랜캐시에 대한 확인.
+```sql
    -- 단일 실행 계획이 전체 플랜캐시의 50%이상 사용할 경우 임시워크로드(ad-hoc workload) 옵션에 대한 최적화 사용을 검토해보는 것이 좋다.
    /* ad-hoc : 비정형적인 Query
 * Prepared : Prepared statement
@@ -32,11 +33,13 @@ author: jooho812
   FROM sys.dm_exec_cached_plans
   GROUP BY objtype
   ORDER BY [Total MBs - USE Count 1] DESC
+```
 
 3. configuration
    remote query timeout(s) 현재 설정이 600(10분)으로 되어 있는데 분석용도로 원래 오래걸리는 쿼리라면 query timeout 설정을 늘리는 방안도 확인해 봐야 함.
 
 4. procedure 통계정보 check
+```sql
    -- procedure 실행 통계(dmv)
    SELECT
    CASE WHEN DATABASE_ID = 32767 THEN 'RESOURCE' ELSE DB_NAME(DATABASE_ID)END AS DBNAME
@@ -57,4 +60,4 @@ author: jooho812
    FROM SYS.DM_EXEC_PROCEDURE_STATS
    CROSS APPLY sys.dm_exec_sql_text(plan_handle) AS st
    ORDER BY AVG_LOGICAL_READS DESC
-
+```
